[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main Menu/fonts/Main Menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main Menu/fonts/Main Menu Theme.tres" type="Theme" id=2]
[ext_resource path="res://Settings/Video/SetSettings.gd" type="Script" id=3]

[node name="Video Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 556.0
margin_bottom = 71.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "Nearest Mipmap Filter (NMF): Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_top = 72.1225
margin_right = 206.0
margin_bottom = 143.122
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "MSAA: Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 812.662
margin_top = 0.284958
margin_right = 1018.66
margin_bottom = 71.285
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "Follow Surface: Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 812.662
margin_top = 72.285
margin_right = 1170.66
margin_bottom = 143.285
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "HD Reflections: Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 813.0
margin_top = 146.0
margin_right = 995.0
margin_bottom = 217.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "HDR: On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
margin_left = 813.0
margin_top = 505.0
margin_right = 995.0
margin_bottom = 576.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "Set Screen Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
margin_left = 813.0
margin_top = 220.0
margin_right = 995.0
margin_bottom = 291.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "Font Oversampling: On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 2.245
margin_top = 488.556
margin_right = 731.245
margin_bottom = 559.556
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.517647, 0.341176, 1 )
keep_pressed_outside = true
text = "Subsurface Scattering quality: Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 205.0
margin_top = 275.0
margin_right = 624.0
margin_bottom = 315.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 143.245
margin_right = 461.0
margin_bottom = 363.245
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/selection_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_selected = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.517647, 0.341176, 1 )
text = "Directional Shadow Size (power of 2, will be rounded):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 312.0
margin_right = 411.0
margin_bottom = 494.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/selection_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_selected = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.517647, 0.341176, 1 )
text = "Shadow Atlas Size (power of 2, will be rounded):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 817.0
margin_top = 292.0
margin_right = 1081.0
margin_bottom = 359.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/selection_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_selected = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.517647, 0.341176, 1 )
text = "Screen Width:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 208.0
margin_top = 438.0
margin_right = 624.0
margin_bottom = 478.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit3" type="TextEdit" parent="."]
margin_left = 815.0
margin_top = 352.0
margin_right = 1231.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 817.0
margin_top = 392.0
margin_right = 1098.0
margin_bottom = 459.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/selection_color = Color( 0.54902, 0.12549, 0.184314, 1 )
custom_colors/font_color_selected = Color( 0.160784, 0.768627, 0.156863, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.517647, 0.341176, 1 )
text = "Screen Height:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit4" type="TextEdit" parent="."]
margin_left = 815.0
margin_top = 457.0
margin_right = 1231.0
margin_bottom = 497.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="." to="." method="_on_Video_Settings_ready"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="TextEdit2" to="." method="_on_TextEdit2_text_changed"]
